examples/app-repo-api/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cadastro
  labels:
    app: api-cadastro
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: api-cadastro
